--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
 
           <!-- Level 4 '| FROM DESPICABLE ME...' Header -->
 
+          <h4>PHARRELL WILLIAMS</h4>
+
+          <h2>HAPPY</h2>
+
+          <h4>| FROM DESPICABLE ME 2 |</h4>
+
         </div>
       </div>
 
