Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 
       <span style="float:left;">  PHARRELLWILLIAMS.COM </span>
 
+<img src="images/columbia-logo.png" alt="Columbia">
 <!--
         [columbia-logo.png]
 
