Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
       <img src="images/columbia-logo.png" alt="Columbia">
 
-      <span style="float:left;">COLUMBIARECORDS.COM</span>
+      <span style="float:right;">COLUMBIARECORDS.COM</span>
 <!--
         [columbia-logo.png]
 
