Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
 
       <span style="float:right;">COLUMBIARECORDS.COM</span>
 </p>
+<p>
+      <img src="images/sony-logo.png" alt="Sony">
 <!--
         [columbia-logo.png]
 
