--- a/index.html
+++ b/index.html
@@ -39,12 +39,12 @@
 <p>
       <span style="float:left;">PHARRELLWILLIAMS.COM</span>
 
-      <img src="images/columbia-logo.png" alt="Columbia">
+      <img src="https://s3.amazonaws.com/learn-verified/columbia-logo.png" alt="Columbia">
 
       <span style="float:right;">COLUMBIARECORDS.COM</span>
 </p>
 <p>
-      <img src="images/sony-logo.png" alt="Sony">
+      <img src="https://s3.amazonaws.com/learn-verified/sony-logo.png" alt="Sony">
 <!--
         [columbia-logo.png]
 
